bk_ida/gccida/g0/gen_peephole2_1262
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_peephole2_1262/src/insn-emit.c:18292:17: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v7 = gen_rtx( ( rtx_code)*( _WORD *)operand3, ( machine_mode)*( ( unsigned __int8 *)operand3 + 2), v6, operand1); 
                ^~~~~~~~
                rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_peephole2_1262/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_peephole2_1262/src/insn-emit.c:18292:26: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
v7 = gen_rtx( ( rtx_code)*( _WORD *)operand3, ( machine_mode)*( ( unsigned __int8 *)operand3 + 2), v6, operand1); 
              ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_peephole2_1262/src/insn-emit.c:18292:49: error: use of undeclared identifier 'machine_mode'
v7 = gen_rtx( ( rtx_code)*( _WORD *)operand3, ( machine_mode)*( ( unsigned __int8 *)operand3 + 2), v6, operand1); 
                                                ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_peephole2_1262/src/obj/insn-emit.o] Error 1
